# tp_openGL

./: CMakeLists.txt  Makefile  README.md
001_Window/: glad.c  main.cpp
OpenGL_Tutorial/001_Window/: main.cpp
OpenGL_Tutorial/002_Triangle/: main.cpp
OpenGL_Tutorial/003_Square/: main.cpp
OpenGL_Tutorial/004_TriForce_Indices/: main.cpp
include/glad/: glad.h
src/: main.cpp  shaderClass.cpp
